--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     alt="Profile picture of Lamosao"
                     class="profile-img"
                 >
-                <h2 class="name">Lamosao, Jose Victor Jr. C.</h2>
+                <h2 class="name">Lamosao</h2>
                 <p class="bio">I’m an aspiring software developer with a passion for building efficient and user-friendly applications. I enjoy learning new technologies and improving my coding skills every day.</p>
                 <a href="https://github.com/Lamosao321" target="_blank" class="github-link">
                     <svg class="github-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
